--- a/Lab06-Zoo.cs/Lab06-Zoo.cs.csproj
+++ b/Lab06-Zoo.cs/Lab06-Zoo.cs.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Lab06_Zoo.cs</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NUnit" Version="3.12.0" />
+  </ItemGroup>
+
 </Project>
